force-app/main/default/objects/PricingMatrix__c/PricingMatrix__c.object-meta.xml
<CustomObject>
    <label>PricingMatrix</label>
    <nameField>
        <displayFormat>PM-{0000}</displayFormat>
        <label>PricingMatrix Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PricingMatrices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>