force-app/main/default/objects/PricingMatrix__c/fields/CWT_Dependent__c.field-meta.xml
<CustomField>
    <fullName>CWT_Dependent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CWT Dependent?</label>
    <type>Checkbox</type>
</CustomField>