force-app/main/default/objects/PricingMatrix__c/fields/CWT_Dependent_Field__c.field-meta.xml
<CustomField>
    <fullName>CWT_Dependent_Field__c</fullName>
    <label>CWT Dependent Field</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CWT_Dependent__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>CWT_Set_Level_Pricing_Allowed__c</fullName>
            </value>
            <value>
                <fullName>CWT_Subset_Level_Pricing_Allowed__c</fullName>
            </value>
            <value>
                <fullName>CWT_Item_Level_Pricing_Allowed__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>