force-app/main/default/objects/PricingMatrix__c/fields/Error_To_Display__c.field-meta.xml
<CustomField>
    <fullName>Error_To_Display__c</fullName>
    <label>Error To Display</label>
    <length>100</length>
    <type>Text</type>
</CustomField>