force-app/main/default/objects/PricingMatrix__c/fields/Fields_To_Blank__c.field-meta.xml
<CustomField>
    <fullName>Fields_To_Blank__c</fullName>
    <label>Fields To Blank</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>List_Down_Percent__c</fullName>
            </value>
            <value>
                <fullName>Price__c</fullName>
            </value>
            <value>
                <fullName>GTM_percent__c</fullName>
            </value>
            <value>
                <fullName>Cost_Up_Percent__c</fullName>
            </value>
            <value>
                <fullName>Quantity_unit_of_measure__c</fullName>
            </value>
            <value>
                <fullName>Price_unit_of_measure__c</fullName>
            </value>
            <value>
                <fullName>Cost__c</fullName>
            </value>
            <value>
                <fullName>Set__c</fullName>
            </value>
            <value>
                <fullName>Subset__c</fullName>
            </value>
            <value>
                <fullName>Brand__c</fullName>
            </value>
            <value>
                <fullName>Class__c</fullName>
            </value>
            <value>
                <fullName>Product_Code__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>