force-app/main/default/objects/PricingMatrix__c/fields/Policy_Type_Value__c.field-meta.xml
<CustomField>
    <fullName>Policy_Type_Value__c</fullName>
    <label>Policy Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Price_Level_Value__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Policy_Type</valueSetName>
    </valueSet>
</CustomField>