force-app/main/default/objects/PricingMatrix__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Policy_Type_Value__c</columns>
    <columns>Price_Level_Value__c</columns>
    <columns>Fields_To_Blank__c</columns>
    <columns>Fields_To_Grey__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>